[tool.poetry]
name = "google-pay-token-decryption"
version = "0.1.0"
description = "Python package to verify and decrypt Google Pay tokens"
authors = ["Delena Malan <delena.malan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
