[tool.poetry]
name = "google-pay-token-decryption"
version = "0.1.0"
description = "Python package to verify and decrypt Google Pay tokens"
authors = ["Delena Malan <delena.malan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^3.4.7"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
