[tool.poetry]
name = "google-pay-token-decryption"
version = "0.1.0"
description = "Python package to verify and decrypt Google Pay tokens"
authors = ["Delena Malan <delena@yoyowallet.com>"]
maintainers = ["Delena Malan <delena@yoyowallet.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/yoyowallet/google-pay-token-decryption"
repository = "https://github.com/yoyowallet/google-pay-token-decryption"

keywords = ["google pay"]

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]

packages = [
    { include = "google_pay_token_decryption" }
]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^3.4.7"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
